[gd_scene load_steps=12 format=3 uid="uid://d16s4bnnn4ana"]

[ext_resource type="Script" uid="uid://dnyxjokln0ixb" path="res://scripts/components/character/a_star_pathfinder_component.gd" id="1_4u6nk"]
[ext_resource type="Texture2D" uid="uid://cjkk01jk25wv8" path="res://assets/sprites/spritesheets/character/base/placeholder_player_spritesheet.png" id="1_lc1d0"]
[ext_resource type="Script" uid="uid://d181i4xk34oy1" path="res://scripts/character/character_base.gd" id="1_s8w3i"]
[ext_resource type="Script" uid="uid://dqs67ka0cxq12" path="res://scripts/components/character/velocity_component.gd" id="2_78gsm"]
[ext_resource type="Script" uid="uid://beuaocx1snkqw" path="res://scripts/components/character/movement_component/movement_component.gd" id="3_03fy3"]
[ext_resource type="Script" uid="uid://cvfmwqaqhg88q" path="res://scripts/components/outline_highlighter.gd" id="4_g5fk4"]
[ext_resource type="Shader" uid="uid://c4oea7qk6fprd" path="res://resources/shaders/outline_highlighter.gdshader" id="5_3etf4"]
[ext_resource type="Script" uid="uid://bx7ddmfcufuyi" path="res://scripts/components/hover_component.gd" id="5_egk7c"]
[ext_resource type="Script" uid="uid://obnnxh2qjhao" path="res://scripts/components/focus_component.gd" id="6_jiyuo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_egk7c"]
size = Vector2(12, 14)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jiyuo"]
resource_local_to_scene = true
shader = ExtResource("5_3etf4")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0

[node name="CharacterBase" type="Node2D"]
script = ExtResource("1_s8w3i")

[node name="AStarPathfinderComponent" type="Node" parent="." node_paths=PackedStringArray("character", "visual_path_line2D", "velocity_component")]
script = ExtResource("1_4u6nk")
character = NodePath("..")
visual_path_line2D = NodePath("Line2D")
velocity_component = NodePath("../VelocityComponent")

[node name="Line2D" type="Line2D" parent="AStarPathfinderComponent"]
width = 2.0
default_color = Color(1, 1, 1, 0.235294)

[node name="TargetTimer" type="Timer" parent="AStarPathfinderComponent"]

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("2_78gsm")

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("character", "velocity_component", "pathfinder_component")]
script = ExtResource("3_03fy3")
character = NodePath("..")
velocity_component = NodePath("../VelocityComponent")
pathfinder_component = NodePath("../AStarPathfinderComponent")

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("visuals")]
script = ExtResource("4_g5fk4")
visuals = NodePath("../Visuals")
outline_color = Color(1, 1, 1, 1)
outline_thickness = 1

[node name="HoverComponent" type="Node2D" parent="." node_paths=PackedStringArray("outline_highlighter", "focus_component")]
script = ExtResource("5_egk7c")
outline_highlighter = NodePath("../OutlineHighlighter")
focus_component = NodePath("../FocusComponent")

[node name="HoverArea" type="Area2D" parent="HoverComponent"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverComponent/HoverArea"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_egk7c")

[node name="FocusComponent" type="Node" parent="." node_paths=PackedStringArray("target", "hover_component", "outline_highlighter", "pathfinder_component")]
script = ExtResource("6_jiyuo")
target = NodePath("..")
hover_component = NodePath("../HoverComponent")
outline_highlighter = NodePath("../OutlineHighlighter")
pathfinder_component = NodePath("../AStarPathfinderComponent")

[node name="Visuals" type="CanvasGroup" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_jiyuo")

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -4)
texture = ExtResource("1_lc1d0")
region_enabled = true
region_rect = Rect2(16, 16, 16, 16)

[connection signal="mouse_entered" from="HoverComponent/HoverArea" to="HoverComponent" method="_on_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="HoverComponent/HoverArea" to="HoverComponent" method="_on_hover_area_mouse_exited"]
